2019-12-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tests/rwfile.c (main): Allow Ghostscript supported formats to be
	a bit lossy.

	* tests/rwblob.c (main): Allow Ghostscript supported formats to be
	a bit lossy.

	* magick/gradient.c (GradientImage): Compute blending alpha with
	double precision for more precision.

2019-12-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Updates in preparation for 1.3.34 release.

2019-12-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Update with changes since the last GM release.

	* coders/png.c (png_read_raw_profile): Use size_t type to store
	profile length and 'nibbles'.  Use safer way to test for profile
	buffer overflow.
	(ReadOnePNGImage): Use size_t type to store 'ping_rowbytes',
	'length', and 'row_offset'.  Check png_pixels allocation for
	arithemetic overflow when computing the required allocation size.

	* coders/tiff.c (WriteNewsProfile): Use size_t type to store
	profile length.

	* coders/pict.c (WritePICTImage): Avoid 'alloc-size-larger-than'
	warning from GCC when allocating row_bytes.

2019-12-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tiff/libtiff/tiffconf.h: Add standard/common libtiff 'SUPPORT'
	options which are used in full-fledged Autoconf/Cmake libtiff
	builds but were missing from the Visual C template file.  In
	particular, WebP is now supported and JBIG is somewhat supported.

	* VisualMagick/jbig/libjbig/LIBRARY.txt (EXCLUDE): Remove
	tstcodec85.c from JBIG library build.

	* VisualMagick/configure/configure.cpp: Add JBIG library to
	include path when building libraries.  Add WebP as a dependency
	when building libtiff.

2019-12-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/nt_base.h ("C"): Assume that float versions of functions
	became available in Visual Studio 2008.

2019-12-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/log.c (InitializeLogInfo): Using the compiled-in