@@ -38,6 +38,15 @@
 <p>2019-12-25  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/render.c (DrawImage): Test gradient image resource limits
+using the proper API.</li>
+<li>magick/resource.c (ResourceInfinity): Fix definition of
+ResourceInfinity.  Due to parenthesis in the wrong place, the
+defined value was -1 rather than the maximum range value.  The
+effect of this is that GetMagickResource() would return -1 rather
+than the maximum range value for the return type as documented.
+Regression was added on Saturday, March 09, 2019 in the 1.3.32
+release via changeset 15927:a5318823758c.</li>
 <li>tests/rwfile.c (main): Allow Ghostscript supported formats to be
 a bit lossy.</li>
 <li>tests/rwblob.c (main): Allow Ghostscript supported formats to be
